--- a/scidigitize-ai/package.json
+++ b/scidigitize-ai/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google/genai": "^1.35.0",
     "@types/jszip": "^3.4.0",
+    "@volcengine/tos-sdk": "^2.9.0",
     "jszip": "^3.10.1",
     "lucide-react": "^0.562.0",
     "pdfjs-dist": "4.0.379",
