--- a/scidigitize-ai/package.json
+++ b/scidigitize-ai/package.json
@@ -23,6 +23,9 @@
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "body-parser": "^2.2.2",
+    "cors": "^2.8.5",
+    "express": "^5.2.1",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
